[package]
name = "ys-sniffer"
version = "0.1.1"
authors = ["KingRainbow44"]
description = "Embeddable packet sniffer for anime game"
license = "MIT"
readme = "README.md"
edition = "2021"

[features]
processor = []

[dependencies]

# KCP decoder library
ys-kcp = { path = "../ys-kcp", features = ["byte-check"] }

# Arbitrary protocol buffer data parser
protoshark = { path = "../protoshark" }

# `pcap` wrapper library
pcap = "2"

# Tokio (async runtime)
tokio = { version = "1", features = ["signal", "rt"] }

# Serde deserialization
serde = { version = "1", features = ["derive"] }

# Channel library
crossbeam-channel = "0.5"

# Logger
log = "0.4"

# `anyhow` error resolver
anyhow = "1"

# Binary manipulation
bytes = "1"

# Runtime-initialized static constants
lazy_static = "1"

# Base64 encoding/decoding
base64 = "0.22"

# RSA decryption
rsa = "0.9"